--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Django==5.1
 torch==2.5.1+cpu
+torchvision==0.20.1+cpu
+torchaudio==2.5.1+cpu
 --extra-index-url https://download.pytorch.org/whl/cpu
-torchvision==0.17.2
-torchaudio==2.2.2
 transformers==4.44.2
 Pillow==10.0.0
 gTTS==2.3.2
